ballots are now a separate type in the db
